# devlution

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  devlution-technical-spec.md  pyproject.toml
devlution/: __init__.py  config.py  observability.py
devlution/agents/: base.py  coder.py  debugger.py  planner.py  reviewer.py  tester.py
devlution/cli/: main.py
devlution/cli/commands/: agent.py  audit.py  gate.py  init.py  run.py  status.py
devlution/integrations/: jira.py  sentry.py  slack.py
devlution/integrations/github/: client.py  issues.py  pr.py
devlution/orchestrator/: checkpoints.py  graph.py  router.py  state.py
devlution/supervision/: audit_log.py  confidence.py  gates.py
devlution/templates/ci/: github-actions.yaml  gitlab-ci.yaml
devlution/templates/configs/: devlution.yaml
devlution/templates/prompts/: coder.md  debugger.md  planner.md  reviewer.md  tester.md
devlution/tools/: code_executor.py  file_editor.py  git_ops.py  static_analysis.py
docs/: ARCHITECTURE.md  CONFIGURATION.md
tests/fixtures/sample_repo/: devlution.yaml
tests/fixtures/sample_repo/src/: calculator.py
tests/fixtures/sample_repo/tests/: test_calculator.py
tests/integration/: test_pipeline.py
tests/unit/: test_audit_log.py  test_confidence.py  test_config.py  test_router.py
